--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 Mad libs Game In Python Project #01
 Guess The Number Game (computer) pro # 02
 Guess The Number Game (user) pro # 03
+Rock, paper scissors pro # 04
+Hangman Game pro # 05
+Countdown timer # 06
+Password Generator pro #07
