--- a/BMI_Calculator.ipynb
+++ b/BMI_Calculator.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDpSpAfDgqg7yKLXethyN7",
+      "authorship_tag": "ABX9TyMGSg/SSIm74VVbiveVCAwi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Streamlit BMI Calculator Web App 🏋️‍♂️"
+        "BMI Calculator\n",
+        "[live](https://bmi-calculator-byfaizee01.streamlit.app/)"
       ],
       "metadata": {
-        "id": "lBkq2MT3Jrgg"
+        "id": "YEhZra4bJ-M7"
       }
     },
     {
@@ -40,41 +41,56 @@
       "source": [
         "import streamlit as st\n",
         "\n",
-        "# Custom CSS for Styling\n",
+        "# Updated CSS (removed .main container styles)\n",
         "st.markdown(\"\"\"\n",
         "    <style>\n",
         "        body {\n",
         "            background-color: #f4f4f4;\n",
         "            font-family: 'Arial', sans-serif;\n",
         "        }\n",
-        "        .main {\n",
-        "            background-color: white;\n",
-        "            padding: 30px;\n",
-        "            border-radius: 10px;\n",
-        "            box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.1);\n",
-        "            text-align: center;\n",
-        "            max-width: 500px;\n",
-        "            margin: auto;\n",
-        "        }\n",
         "        .stButton>button {\n",
-        "            background-color: #4CAF50;\n",
+        "            background: linear-gradient(90deg, #4CAF50, #45a049);\n",
         "            color: white;\n",
-        "            border-radius: 5px;\n",
-        "            padding: 10px 20px;\n",
+        "            border-radius: 8px;\n",
+        "            padding: 12px;\n",
         "            font-size: 18px;\n",
+        "            font-weight: bold;\n",
+        "            width: 100%;\n",
         "            border: none;\n",
+        "            transition: 0.3s;\n",
         "        }\n",
         "        .stButton>button:hover {\n",
-        "            background-color: #45a049;\n",
+        "            background: linear-gradient(90deg, #45a049, #4CAF50);\n",
         "        }\n",
         "        .bmi-result {\n",
-        "            font-size: 22px;\n",
+        "            font-size: 24px;\n",
         "            font-weight: bold;\n",
-        "            padding: 10px;\n",
-        "            border-radius: 5px;\n",
+        "            padding: 12px;\n",
+        "            border-radius: 8px;\n",
         "            text-align: center;\n",
-        "            background-color: #f9f9f9;\n",
+        "            background: #f9f9f9;\n",
         "            margin-top: 20px;\n",
+        "        }\n",
+        "        div[data-baseweb=\"input\"] {\n",
+        "            background: none !important;\n",
+        "        }\n",
+        "        input {\n",
+        "            background: none !important;\n",
+        "            border: none !important;\n",
+        "            border-bottom: 2px solid #4CAF50 !important;\n",
+        "            padding: 8px !important;\n",
+        "            font-size: 16px !important;\n",
+        "            text-align: center !important;\n",
+        "        }\n",
+        "        input:focus {\n",
+        "            outline: none !important;\n",
+        "            border-bottom: 2px solid #45a049 !important;\n",
+        "        }\n",
+        "        .height-label {\n",
+        "            font-size: 16px;\n",
+        "            font-weight: bold;\n",
+        "            color: #333;\n",
+        "            margin-bottom: 5px;\n",
         "        }\n",
         "    </style>\n",
         "\"\"\", unsafe_allow_html=True)\n",
@@ -82,16 +98,53 @@
         "# Web App Title\n",
         "st.markdown(\"<h1 style='text-align:center; color:#333;'>🏋️‍♂️ BMI Calculator</h1>\", unsafe_allow_html=True)\n",
         "\n",
+        "# Short Description\n",
+        "st.markdown(\"\"\"\n",
+        "    <p style='text-align:center; color:#666; font-size:16px;'>\n",
+        "    Calculate your Body Mass Index (BMI) to know if you are underweight, normal, overweight, or obese.\n",
+        "    </p>\n",
+        "\"\"\", unsafe_allow_html=True)\n",
+        "\n",
         "# User Inputs (inside a styled div)\n",
         "st.markdown('<div class=\"main\">', unsafe_allow_html=True)\n",
         "\n",
-        "height = st.number_input(\"Enter your height (in meters):\", min_value=0.5, max_value=2.5, step=0.01, format=\"%.2f\")\n",
-        "weight = st.number_input(\"Enter your weight (in kg):\", min_value=10.0, max_value=300.0, step=0.5, format=\"%.1f\")\n",
+        "# Session State for Dynamic Updates\n",
+        "if \"height_ft\" not in st.session_state:\n",
+        "    st.session_state.height_ft = 5\n",
+        "if \"height_in\" not in st.session_state:\n",
+        "    st.session_state.height_in = 5\n",
+        "if \"height_m\" not in st.session_state:\n",
+        "    st.session_state.height_m = round(((5 * 12) + 5) * 0.0254, 2)\n",
+        "\n",
+        "# Function to Update Meters when Feet/Inches Change\n",
+        "def update_meters():\n",
+        "    total_inches = (st.session_state.height_ft * 12) + st.session_state.height_in\n",
+        "    st.session_state.height_m = round(total_inches * 0.0254, 2)\n",
+        "\n",
+        "# Function to Update Feet/Inches when Meters Change\n",
+        "def update_feet_inches():\n",
+        "    total_inches = round(st.session_state.height_m / 0.0254)\n",
+        "    st.session_state.height_ft = total_inches // 12\n",
+        "    st.session_state.height_in = total_inches % 12\n",
+        "\n",
+        "# Height Input Fields with Labels\n",
+        "st.markdown(\"<p class='height-label'>Enter your height:</p>\", unsafe_allow_html=True)\n",
+        "col1, col2, col3 = st.columns(3)\n",
+        "with col1:\n",
+        "    feet = st.number_input(\"Feet\", min_value=1, max_value=8, step=1, key=\"height_ft\", on_change=update_meters)\n",
+        "with col2:\n",
+        "    inches = st.number_input(\"Inches\", min_value=0, max_value=11, step=1, key=\"height_in\", on_change=update_meters)\n",
+        "with col3:\n",
+        "    meters = st.number_input(\"Meters\", min_value=0.5, max_value=2.5, step=0.01, format=\"%.2f\", key=\"height_m\", on_change=update_feet_inches)\n",
+        "\n",
+        "# Weight Input\n",
+        "st.markdown(\"<p class='height-label'>Enter your weight (kg):</p>\", unsafe_allow_html=True)\n",
+        "weight = st.number_input(\"\", min_value=10.0, max_value=300.0, step=0.5, format=\"%.1f\")\n",
         "\n",
         "# BMI Calculation\n",
         "if st.button(\"Calculate BMI\"):\n",
-        "    if height > 0 and weight > 0:\n",
-        "        bmi = round(weight / (height ** 2), 2)\n",
+        "    if st.session_state.height_m > 0 and weight > 0:\n",
+        "        bmi = round(weight / (st.session_state.height_m ** 2), 2)\n",
         "\n",
         "        # BMI Category & Styling\n",
         "        if bmi < 18.5:\n",
@@ -115,7 +168,7 @@
         "st.markdown('</div>', unsafe_allow_html=True)  # Close div\n"
       ],
       "metadata": {
-        "id": "IXfRvPriJ69u"
+        "id": "33VV6lqhLkij"
       },
       "execution_count": null,
       "outputs": []
