--- a/README
+++ b/README
@@ -5,3 +5,5 @@ Rock, paper scissors pro # 04
 Hangman Game pro # 05
 Countdown timer # 06
 Password Generator pro #07
+BMI Calculator pro # 08
+File Converter pro # 09 (python prject)
