--- a/mad_libs_game.ipynb
+++ b/mad_libs_game.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6Pbnyu0l5lOJu+4em534t",
+      "authorship_tag": "ABX9TyPh9k4J43pHyeL9XzuRcQ+G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Mad libs Game In Python"
+        "**Project 1: Mad libs Game In Python**"
       ],
       "metadata": {
         "id": "ETJSrqrGWKyG"
