--- a/Guess_the_Number_Game_(User).ipynb
+++ b/Guess_the_Number_Game_(User).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWratAVjaiOgGDtYCJF2Vg",
+      "authorship_tag": "ABX9TyPP5QSaTSHbhg0jRzhctCr1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Guess The Number Game (user)"
+        "**Project 3: Guess The Number Game (user)**"
       ],
       "metadata": {
         "id": "oBMU8ODFj1RN"
@@ -79,7 +79,7 @@
         "id": "4YBfRz2WloX_",
         "outputId": "10dfe974-7e15-4ff1-f0ee-2c27c6f644fe"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
