--- a/Rock,_Paper,_Scissors_Game.ipynb
+++ b/Rock,_Paper,_Scissors_Game.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOrsYvw1CJIgMlDwCWB7/c",
+      "authorship_tag": "ABX9TyPo9Q0xyLfXMkz4pTcB00rW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Rock, Paper, Scissors pro # 04"
+        "**Project 4: Rock, Paper, Scissors project**"
       ],
       "metadata": {
         "id": "FlPlS4LLEG7T"
@@ -114,7 +114,7 @@
         "id": "lLKEShAoFQj8",
         "outputId": "625bb137-b3bf-4d7b-f835-204400f6476d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
