--- a/Hangman_Game.ipynb
+++ b/Hangman_Game.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnt37Cxn1zvo6Mh580vZLz",
+      "authorship_tag": "ABX9TyM/XaLF8idbKc+9PPfZ143G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Hangman Game pro # 05"
+        "**Project 5: Hangman Game pro # 05**"
       ],
       "metadata": {
         "id": "0hialkZBG390"
@@ -171,7 +171,7 @@
         "id": "4zsG9gDtH1VY",
         "outputId": "6f112f36-4b03-4fe9-c888-0096e04e42bf"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
