--- a/Countdown_Timer.ipynb
+++ b/Countdown_Timer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCbayjozeszE7KpG7bP013",
+      "authorship_tag": "ABX9TyNT+a1eAxfNCEuP24UpTrvT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Countdown Timer pro # 06"
+        "**Project 6: Countdown Timer python project**"
       ],
       "metadata": {
         "id": "hJY2r9W_77b3"
@@ -72,7 +72,7 @@
         "id": "fjM_7hbi8TKe",
         "outputId": "8da4a048-51e5-4abb-a0a3-33ca9f24e7ab"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
