--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Assignments 1 to 6
+
 Mad libs Game In Python Project #01
 Guess The Number Game (computer) pro # 02
 Guess The Number Game (user) pro # 03
